--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
 <html>
+<head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-33C1E6C5HQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-33C1E6C5HQ');
+</script>
+</head>
+<body>
+</body>
 </html>
