--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <style>
 a {color: rgba(200,200,200,1)}
 a:hover {color: rgba(255,255,255,1)}
-body {font-family: 'Courier New'; background: rgb(50,50,255); background: linear-gradient(135deg, rgba(0,0,200,1) 0%, rgba(0,0,0,1) 100%); background-attachment: fixed;}
+body {font-family: 'Courier New'; background: rgb(0,0,200); background: linear-gradient(135deg, rgba(0,0,200,1) 0%, rgba(0,0,0,1) 100%); background-attachment: fixed;}
 </style>
 </head>
 <body>
 <img src="https://antoniovandre2.github.io/AV3DNavigator/AV3DNavigator%20-%20Logo%20-%20200p.png"/>
 <br><br>
-<a href="https://sourceforge.net/projects/av3dnavigator/">sourceforge.net/projects/av3dnavigator</a>
+<a target="_blank" href="https://sourceforge.net/projects/av3dnavigator/">sourceforge.net/projects/av3dnavigator</a>
 <br><br>
-<a href="https://github.com/antoniovandre2/AV3DNavigator">github.com/antoniovandre2/AV3DNavigator</a>
+<a target="_blank" href="https://github.com/antoniovandre2/AV3DNavigator">github.com/antoniovandre2/AV3DNavigator</a>
 <!--
 <br><br>
 Estatísticas de uso:
