--- a/index.html
+++ b/index.html
@@ -18,7 +18,36 @@ body {font-family: 'Courier New'; background: rgb(0,0,200); background: linear-g
 <body>
 <img src="https://antoniovandre2.github.io/AV3DNavigator/AV3DNavigator%20-%20Logo%20-%20200p.png"/>
 <br><br>
-<a target="_blank" href="https://sourceforge.net/projects/av3dnavigator/">sourceforge.net/projects/av3dnavigator</a>
+____________________
+<br><br>
+
+<a href="https://sourceforge.net/projects/av3dnavigator/files/latest/download"><img alt="Download AV3DNavigator" src="https://a.fsdn.com/con/app/sf-download-button" width=276 height=48 srcset="https://a.fsdn.com/con/app/sf-download-button?button_size=2x 2x"></a>
+
+<br><br>
+
+<a href="https://sourceforge.net/projects/av3dnavigator/files/latest/download"><img alt="Download AV3DNavigator" src="https://img.shields.io/sourceforge/dt/av3dnavigator.svg" ></a>
+
+<br><br>
+
+<table><tr><td>
+<!-- Begin SF Tag -->
+<div class="sf-root" data-id="3603899" data-badge="oss-users-love-us-white" style="width:125px">
+    <a href="https://sourceforge.net/projects/av3dnavigator/" target="_blank">AV3DNavigator</a>
+</div>
+<script>(function () {var sc=document.createElement('script');sc.async=true;sc.src='https://b.sf-syn.com/badge_js?sf_id=3603899';var p=document.getElementsByTagName('script')[0];p.parentNode.insertBefore(sc, p);})();
+</script>
+<!-- End SF Tag -->
+</td><td>
+<!-- Begin SF Tag -->
+<div class="sf-root" data-id="3603899" data-badge="oss-rising-star-white" data-metadata="achievement=oss-rising-star" style="width:125px">
+    <a href="https://sourceforge.net/projects/av3dnavigator/" target="_blank">AV3DNavigator</a>
+</div>
+<script>(function () {var sc=document.createElement('script');sc.async=true;sc.src='https://b.sf-syn.com/badge_js?sf_id=3603899';var p=document.getElementsByTagName('script')[0];p.parentNode.insertBefore(sc, p);})();
+</script>
+<!-- End SF Tag -->
+</td></tr></table>
+<br><br>
+____________________
 <br><br>
 <a target="_blank" href="https://github.com/antoniovandre2/AV3DNavigator">github.com/antoniovandre2/AV3DNavigator</a>
 <!--
