--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a:hover {color: rgba(255,255,255,1)}
 body {font-family: 'Courier New'; background: rgb(0,0,200); background: linear-gradient(135deg, rgba(0,0,200,1) 0%, rgba(0,0,0,1) 100%); background-attachment: fixed;}
 </style>
 </head>
-<body>
+<body style="margin:10px;padding:10px">
 <img src="https://antoniovandre2.github.io/AV3DNavigator/AV3DNavigator%20-%20Logo%20-%20200p.png"/>
 <br><br>
 ____________________
@@ -49,11 +49,10 @@ ____________________
 <br><br>
 ____________________
 <br><br>
+<table><tr><td>
+<img src="https://antoniovandre2.github.io/AV3DNavigator/GitHub%20logo.png" width="80px"/>
+</td><td>
 <a target="_blank" href="https://github.com/antoniovandre2/AV3DNavigator">github.com/antoniovandre2/AV3DNavigator</a>
-<!--
-<br><br>
-Estatísticas de uso:
-<br><br>
-<a href="https://analytics.google.com/analytics/web/#/p415415518/reports/reportinghub?params=_u..nav%3Dmaui">AV3DNavigator - Eventos</a>-->
+</td></tr></table>
 </body>
 </html>
